--- a/extract_fundsBR.ipynb
+++ b/extract_fundsBR.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -91,7 +91,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import zipfile\n",
-    "import os"
+    "import os\n",
+    "import shutil"
    ]
   },
   {
@@ -116,7 +117,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Unzip data\n",
@@ -139,7 +142,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Check files names\n",
@@ -335,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -344,7 +349,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BLC data:\n",
+      "Error: folder already existis.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create directory to save structured data\n",
+    "if not os.path.exists(strucPath):\n",
+    "    os.makedirs(strucPath)\n",
+    "\n",
+    "    # Read BLC files, append blocks in dataframes and save\n",
+    "    print('BLC data:')\n",
+    "    for blk in range(1, 8+1):\n",
+    "        dfBlk = readBlcBlock(blk = blk, folder = unzipTemp)\n",
+    "        #print(blk, dfBlk.shape)\n",
+    "        dfBlk.to_pickle(strucPath + 'BLC_blk_' + str(blk) + '_.pkl')\n",
+    "    \n",
+    "else:\n",
+    "    print('Error: folder already existis.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "8 2005 None\n",
       "8 2006 None\n",
       "8 2007 None\n",
@@ -370,39 +403,8 @@
     }
    ],
    "source": [
-    "# Create directory to save structured data\n",
-    "if not os.path.exists(strucPath):\n",
-    "    os.makedirs(strucPath)\n",
-    "\n",
-    "    # Read BLC files, append blocks in dataframes and save\n",
-    "    print('BLC data:')\n",
-    "    for blk in range(8, 8+1):\n",
-    "        dfBlk = readBlcBlock(blk = blk, folder = unzipTemp)\n",
-    "        print(blk, dfBlk.shape)\n",
-    "        dfBlk.to_pickle(strucPath + 'BLC_blk_' + str(blk) + '_.pkl')\n",
-    "    \n",
-    "else:\n",
-    "    print('Error: folder already existis.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "blk"
+    "dfBlk = readBlcBlock(blk = 8, folder = unzipTemp)\n",
+    "dfBlk.to_pickle(strucPath + 'BLC_blk_' + str(8) + '_.pkl')"
    ]
   },
   {
@@ -412,6 +414,44 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": [
+    "blk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cda_fi_PL_2005.csv\n",
+      "cda_fi_PL_2006.csv\n",
+      "cda_fi_PL_2007.csv\n",
+      "cda_fi_PL_2008.csv\n",
+      "cda_fi_PL_2009.csv\n",
+      "cda_fi_PL_2010.csv\n",
+      "cda_fi_PL_2011.csv\n",
+      "cda_fi_PL_2012.csv\n",
+      "cda_fi_PL_2013.csv\n",
+      "cda_fi_PL_2014.csv\n",
+      "cda_fi_PL_2015.csv\n",
+      "cda_fi_PL_2016.csv\n",
+      "cda_fi_PL_2017.csv\n",
+      "cda_fi_PL_201801.csv\n",
+      "cda_fi_PL_201802.csv\n",
+      "cda_fi_PL_201803.csv\n",
+      "cda_fi_PL_201804.csv\n",
+      "cda_fi_PL_201805.csv\n",
+      "cda_fi_PL_201806.csv\n",
+      "cda_fi_PL_201807.csv\n",
+      "cda_fi_PL_201808.csv\n",
+      "(1691022, 5)\n"
+     ]
+    }
+   ],
    "source": [
     "# Read PL files, append blocks in dataframes and save\n",
     "dfPL = readPL(folder = unzipTemp)\n",
@@ -421,15 +461,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Delete temporary unziped files and folder\n",
     "shutil.rmtree(unzipTemp)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
